--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
 <h1> Youpi la vie <h1>
+
+  f12   ..Hé là, qui va là? (Inspecteur Gadget)
+Et là, ça va pas? (Ouh, ouh)
+Oh là, je suis là (Inspecteur Gadget)
